Fix - Visibility of the Slider Buttons

--- a/src/components/Instructors/Instructors.scss
+++ b/src/components/Instructors/Instructors.scss
@@ -77,3 +77,17 @@
     font-size: 14px;
   }
 }
+
+//Media
+
+@media screen and (max-width: 1200px) {
+  .instructors-slider {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .instructors-slider {
+    width: 100%;
+  }
+}
